[package]
name = "spotify-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12.0", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
clap = { version = "4.4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6.2"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "blob",
    "chrono",
    "serde_json",
] }
rusqlite_migration = "1.0.2"
serde_rusqlite = "0.33.1"
